# docling-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PROBLEM_STATEMENT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  dco.yml  docs.yml  pr-labeler.yml  release.yml  security.yml  semantic-release.yml
assets/flowcharts/architecture/: index.html
assets/flowcharts/chunk_batcher/: index.html
assets/flowcharts/config_flow/: index.html
assets/flowcharts/conversion_process/: index.html
assets/flowcharts/delta_extraction/: index.html
assets/flowcharts/doc_chunker/: index.html
assets/flowcharts/exporters/: index.html
assets/flowcharts/extension_points/: index.html
assets/flowcharts/extraction_flow/: index.html
assets/flowcharts/four_stage_pipeline/: index.html
assets/flowcharts/graph_converter/: index.html
assets/flowcharts/graph_pipeline/: index.html
assets/flowcharts/input_normalization/: index.html
assets/flowcharts/llm_backend/: index.html
assets/flowcharts/llm_clients/: index.html
assets/flowcharts/llm_consolidation/: index.html
assets/flowcharts/many_to_one_mode/: index.html
assets/flowcharts/model_decision_tree/: index.html
assets/flowcharts/ocr_pipeline/: index.html
assets/flowcharts/one_to_one_mode/: index.html
assets/flowcharts/pipeline_flow/: index.html
assets/flowcharts/pipeline_stages/: index.html
assets/flowcharts/processing_mode_tree/: index.html
assets/flowcharts/programmatic_merge/: index.html
assets/flowcharts/staged_extraction/: index.html
assets/flowcharts/vision_pipeline/: index.html
assets/flowcharts/vlm_backend/: index.html
community/: index.html
community/github-workflow/: index.html
community/release-process/: index.html
docling_graph/: __init__.py  config.py  config_template.yaml  mypy.ini  protocols.py
docling_graph/cli/: config_builder.py  config_utils.py  constants.py  dependencies.py  main.py  validators.py
docling_graph/llm_clients/: __init__.py  config.py  litellm.py  response_handler.py  schema_utils.py
docling_graph/pipeline/: context.py  orchestrator.py  stages.py  trace.py
docs/: index.md
docs/community/: github-workflow.md  index.md  release-process.md
docs/examples/: README.md
docs/fundamentals/: index.md
docs/introduction/: architecture.md  index.md  key-concepts.md  quickstart.md  use-cases.md
docs/reference/: config.md  converters.md  exceptions.md  exporters.md  extractors.md  index.md  llm-clients.md  pipeline.md  protocols.md
docs/usage/: index.md
examples/: index.html
examples/scripts/: 01_quickstart_vlm_image.py  04_input_formats.py  07_local_inference.py  09_batch_processing.py  13_delta_extraction.py
examples/templates/: billing_document.py  id_card.py
fundamentals/: index.html
fundamentals/extraction-process/: index.html
fundamentals/graph-management/: index.html
fundamentals/installation/: index.html
fundamentals/pipeline-configuration/: index.html
fundamentals/schema-definition/: index.html
introduction/: index.html
introduction/architecture/: index.html
introduction/key-concepts/: index.html
introduction/quickstart/: index.html
introduction/use-cases/: index.html
reference/: index.html
reference/config/: index.html
reference/converters/: index.html
reference/exceptions/: index.html
reference/exporters/: index.html
reference/extractors/: index.html
reference/llm-clients/: index.html
reference/pipeline/: index.html
reference/protocols/: index.html
scripts/: test_bedrock.py  test_integration.py
scripts/tests/: README.md  templates.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  pytest.ini
tests/fixtures/: __init__.py
tests/integration/: __init__.py  conftest.py  test_cli.py  test_debug_mode.py  test_input_formats.py  test_pipeline.py  test_pipeline_cleanup.py  test_staged_quality_benchmark.py
tests/mocks/: mock_backends.py  mock_llm_clients.py  mock_processors.py
tests/unit/: __init__.py  test_exceptions.py  test_protocols.py
usage/: index.html
usage/advanced/: index.html
usage/api/: index.html
usage/cli/: index.html
usage/examples/: index.html
(+285 files in other folders)
