[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docling_graph"
version = "1.4.4"
description = "A tool to convert documents into knowledge graphs using Docling."

license = { text = "MIT License" }
keywords = ["docling", "knowledge-graph", "nlp", "pdf", "graph"]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",    
]
readme = "README.md"
authors = [
  { name = "Ayoub El Bouchtili", email = "ayoub.elbouchtili@fr.ibm.com" },
  { name = "Michele Dolfi", email = "dol@zurich.ibm.com" },
  { name = "Maxime Gillot", email = "Maxime.Gillot@ibm.com" },
  { name = "Sophie Lang", email = "sophie.lang@de.ibm.com" },
  { name = "Guilhaume Leroy Meline", email = "guilhaume@fr.ibm.com" },
  { name = "Peter Staar", email = "taa@zurich.ibm.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "docling>=2.70.0,<3.0.0",
    "docling-core[chunking, chunking-openai]>=2.50.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "networkx>=3.0.0,<4.0.0",
    "rich>=13,<15",
    "typer[all]>=0.12,<1.0.0",
    "python-dotenv>=1.0,<2.0",
    "litellm>=1.0.0,<2.0.0",
    "boto3>=1.28.57",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0,<7.0",
    "aiofiles>=24.0.0,<26.0.0",
]

[project.urls]
homepage = "https://github.com/mabrigos/docling-graph"
repository = "https://github.com/mabrigos/docling-graph"
upstream = "https://github.com/docling-project/docling-graph"

[project.scripts]
docling-graph = "docling_graph.cli.main:main"

[project.optional-dependencies]
# Legacy provider SDKs removed; LiteLLM is installed by default.
delta-resolvers = [
    "spacy",
    "rapidfuzz",
]


[tool.setuptools.packages.find]
include = ["docling_graph*"]

[tool.ruff]
target-version = "py310"
line-length = 100
respect-gitignore = true

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "C90",  # mccabe (complexity)
  "ANN",  # flake8-annotations
  "PD",   # pandas-vet
  "PIE",  # flake8-pie
  "Q",    # flake8-quotes
  "RUF",  # Ruff-specific checks
  "ASYNC" # async
]
ignore = [
  "C408",   # Unnecessary `dict()` call (rewrite as a literal)
  "E501",   # Line too long, handled by ruff formatter
  "D107",   # "Missing docstring in __init__",
  "F401",   # imported but unused; consider using `importlib.util.find_spec` to test for "
  "F811",   # "redefinition of the same function"
  "PL",     # Pylint
  "RUF012", # Mutable Class Attributes
  "UP006",  # List vs list, etc
  "UP007",  # Option and Union
  "UP035",  # `typing.Set` is deprecated, use `set` instead"
  # "ANN101",  # Missing type annotation for self
  # "ANN102",  # Missing type annotation for cls
  "ANN401",  # Dynamically typed expressions (Any)
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  # Allow Pydantic's `@validator` decorator to trigger class method treatment.
  "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
pretty = true
python_version = "3.10"
no_implicit_optional = true
exclude = ["^site/"]
plugins = "pydantic.mypy"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "rich.*",
    "typer.*",
    "yaml.*",
    "mypy.*",
    "pandas.*",
    "networkx.*",
    "litellm.*",
    "tiktoken.*",
    "google.*",
    "rapidfuzz",
    "rapidfuzz.*",
    "spacy",
    "spacy.*",
]
ignore_missing_imports = true
